// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.api.v2alpha;

import "google/type/date.proto";

option java_package = "org.wfanet.measurement.api.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "ExchangeProto";

// Represents a RecurringExchange on a specific date.
message Exchange {
  message Key {
    string recurring_exchange_id = 1;
    string exchange_id = 2;
  }
  // Resource key.
  Key key = 1;

  // Must be a complete date (no field can be unset/zero).
  google.type.Date date = 2;

  // SHA256 hash of the audit trail, if uploaded.
  bytes audit_trail_hash = 3;
}
